[gd_scene load_steps=13 format=3 uid="uid://kc3eerkfd3s6"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_p52kn"]
[ext_resource type="Texture2D" uid="uid://cr7mnl4lexra" path="res://Sprites/Buttons/(M1n3c4rt)StartUnpressed.png" id="2_dplf8"]
[ext_resource type="Texture2D" uid="uid://c3uqqskwmdcl0" path="res://Sprites/(M1n3c4rt)NightLightLogo.png" id="2_oisqv"]
[ext_resource type="Texture2D" uid="uid://wqloapvxilx7" path="res://Sprites/Buttons/(M1n3c4rt)StartPressed.png" id="3_o2bih"]
[ext_resource type="Texture2D" uid="uid://croe3obb8sfo2" path="res://Sprites/Buttons/(M1n3c4rt)CreditsUnpressed.png" id="4_seewh"]
[ext_resource type="Texture2D" uid="uid://cq61e3t1aphd6" path="res://Sprites/Buttons/(M1n3c4rt)CreditsPressed.png" id="5_4o118"]
[ext_resource type="Texture2D" uid="uid://dj4qa075s8yfh" path="res://Sprites/(M1n3c4rt)CreditScreen.png" id="8_pghe0"]
[ext_resource type="Texture2D" uid="uid://dtuc8wic4on7y" path="res://Sprites/Buttons/(M1n3c4rt)BackUnpressed.png" id="9_ycqqa"]
[ext_resource type="Texture2D" uid="uid://b845qwwh55f43" path="res://Sprites/Buttons/(M1n3c4rt)BackPressed.png" id="10_6xs0m"]

[sub_resource type="Animation" id="Animation_uw8vx"]
resource_name = "Credits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, -64), Vector2(-128, -64)]
}

[sub_resource type="Animation" id="Animation_y57eo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(256, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w8fhw"]
_data = {
"Credits": SubResource("Animation_uw8vx"),
"RESET": SubResource("Animation_y57eo")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_p52kn")
gameScene = "res://Scenes/level_1.tscn"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -50.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
auto_translate = false
localize_numeral_system = false
texture = ExtResource("2_oisqv")
stretch_mode = 5

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 20.0
offset_right = -17.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_dplf8")
texture_pressed = ExtResource("3_o2bih")

[node name="CreditsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = 20.0
offset_right = 54.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_seewh")
texture_pressed = ExtResource("5_4o118")

[node name="Credits" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 256.0
offset_right = 512.0
offset_bottom = 128.0
texture = ExtResource("8_pghe0")

[node name="BackButton" type="TextureButton" parent="Credits"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -27.0
offset_right = 83.0
offset_bottom = -9.0
grow_vertical = 0
texture_normal = ExtResource("9_ycqqa")
texture_pressed = ExtResource("10_6xs0m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Credits"]
libraries = {
"": SubResource("AnimationLibrary_w8fhw")
}

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Credits/BackButton" to="." method="_on_back_button_pressed"]
